# libneurosdk

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  example.c  flake.nix  neurosdk.pc.in  shell.nix
.github/workflows/: release.yml
examples/: simple.c  tictactoe.c
include/: neurosdk.h
src/: neurosdk.c
